combined my neptune specific commands with addy's existing dotfiles. fixed issues with prompt color.

--- a/.inputrc
+++ b/.inputrc
@@ -41,3 +41,7 @@ set convert-meta off
 
 # Use Alt/Meta + Delete to delete the preceding word
 "\e[3;3~": kill-word
+
+ # allow the use of the Home/End keys
+"\e[1~": beginning-of-line
+"\e[4~": end-of-line
